# Interface_Components

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ComponentPalette.tsx  GLCanvas.tsx  ImageUploader.tsx
src/components/animations/: AtomNucleus.css  AtomNucleus.tsx  BouncingBars.css  BouncingBars.tsx  CandlestickTicker.css  CandlestickTicker.tsx  DNAHelix.css  DNAHelix.tsx  DominoCascade.css  DominoCascade.tsx  FishFinder.css  FishFinder.tsx  FlipCards.css  FlipCards.tsx  FractalTree.css  FractalTree.tsx  GearMesh.css  GearMesh.tsx  HourglassFlip.css  HourglassFlip.tsx  MatrixRain.css  MatrixRain.tsx  MorphingShape.css  MorphingShape.tsx  OrbitDots.css  OrbitDots.tsx  ParticleSwirl.css  ParticleSwirl.tsx  ProgressSnake.css  ProgressSnake.tsx  PulsatingBrain.css  PulsatingBrain.tsx  PulseGrid.css  PulseGrid.tsx  (+12 more)
src/data/: testData.ts
src/hooks/: useAnimationFrameDirty.ts  useGLRenderer.ts  useImageWorker.ts  useLayoutWorker.ts  useSceneGraph.ts
src/lib/: BaseComponent.ts  DrawListPool.ts  GLRenderer.ts  GLRendererCanvas2D.ts  SceneGraph.ts  createGLRenderer.ts
src/showcase/: ShowcasePage.css  ShowcasePage.tsx  TabBar.css  TabBar.tsx  ThemeSelector.css  ThemeSelector.tsx
src/themes/: glThemeBridge.ts  themeContext.tsx  themeDefinitions.ts  themes.css
src/types/: index.ts  theme.ts
src/workers/: imageWorker.ts  layoutWorker.ts
(+99 files in other folders)
