[package]
name = "interface-components"
version = "0.1.0"
description = "Interface component prototyping app"
authors = ["Anthony"]
edition = "2021"

[lib]
name = "interface_components_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
